frontend/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  margin: 0;
  overflow: auto;
  padding: 0;
  height: 100%;
}

html {
  /* Should be kept in line with the constant of width in the constants.js file */
  min-width: 360px;
  height: 100%;
}

#root {
  height: 100%;
  font-size: 16px;
  margin: 0;
  padding: 0;
  width: 100%;
}

.scrollbar-hide::-webkit-scrollbar {
  display: none;
}

/* For IE, Edge and Firefox */
.scrollbar-hide {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

@font-face {
  font-family: 'AlphaLyrae';
  src: url('./AlphaLyrae-Medium.woff2') format('woff2');
}

.loader-item:nth-child(0) {
  animation-delay: 0ms;
  animation-direction: reverse;
}
.loader-item:nth-child(1) {
  animation-delay: -150ms;
  animation-direction: alternate;
}
.loader-item:nth-child(2) {
  animation-delay: 100ms;
  animation-direction: reverse;
}
.loader-item:nth-child(3) {
  animation-delay: -450ms;
  animation-direction: alternate;
}
.loader-item:nth-child(4) {
  animation-delay: 600ms;
  animation-direction: reverse;
}
.loader-item:nth-child(5) {
  animation-delay: -500ms;
  animation-direction: alternate;
}
.loader-item:nth-child(6) {
  animation-delay: 1500ms;
  animation-direction: reverse;
}
.loader-item:nth-child(7) {
  animation-delay: -1400ms;
  animation-direction: alternate;
}
.loader-item:nth-child(8) {
  animation-delay: 1200ms;
  animation-direction: reverse;
}
.loader-item:nth-child(9) {
  animation-delay: -1350ms;
  animation-direction: alternate;
}
.loader-item:nth-child(10) {
  animation-delay: 1000ms;
  animation-direction: reverse;
}
.loader-item:nth-child(11) {
  animation-delay: -1100ms;
  animation-direction: alternate;
}
.loader-item:nth-child(12) {
  animation-delay: 3000ms;
  animation-direction: reverse;
}
.loader-item:nth-child(13) {
  animation-delay: -3250ms;
  animation-direction: alternate;
}
.loader-item:nth-child(14) {
  animation-delay: 2100ms;
  animation-direction: reverse;
}
.loader-item:nth-child(15) {
  animation-delay: -3000ms;
  animation-direction: alternate;
}
.loader-item:nth-child(16) {
  animation-delay: 1600ms;
  animation-direction: reverse;
}
.loader-item:nth-child(17) {
  animation-delay: -4250ms;
  animation-direction: alternate;
}
.loader-item:nth-child(18) {
  animation-delay: 4500ms;
  animation-direction: reverse;
}
.loader-item:nth-child(19) {
  animation-delay: -3800ms;
  animation-direction: alternate;
}
.loader-item:nth-child(20) {
  animation-delay: 3000ms;
  animation-direction: reverse;
}
.loader-item:nth-child(21) {
  animation-delay: -4200ms;
  animation-direction: alternate;
}
.loader-item:nth-child(22) {
  animation-delay: 4400ms;
  animation-direction: reverse;
}
.loader-item:nth-child(23) {
  animation-delay: -5750ms;
  animation-direction: alternate;
}
.loader-item:nth-child(24) {
  animation-delay: 6000ms;
  animation-direction: reverse;
}
.loader-item:nth-child(25) {
  animation-delay: -6250ms;
  animation-direction: alternate;
}
.loader-item {
  animation: flickering 0.4s linear alternate infinite;
}
@keyframes flickering {
  0% {
    opacity: 1;
  }
  25% {
    opacity: 1;
  }
  26% {
    opacity: 0;
  }
  100% {
    opacity: 0;
  }
}

